# enum-fun

./: Cargo.toml  LICENSE  README.md
macros/: Cargo.toml
macros/src/: lib.rs  name.rs  predicates.rs  variants.rs
src/: lib.rs
