[package]
name = "enum-fun"
version = "0.1.1"
edition = "2024"
description = "Silly enum helpers."
repository = "https://github.com/tipsypastels/enum-fun"
license = "MIT"

[workspace]
members = [".", "./macros"]

[features]
name_trait = ["enum-fun-macros/name_trait"]
name_includes_plural = ["enum-fun-macros/name_includes_plural"]

[dependencies]
enum-fun-macros = { version = "0.1.1", path = "./macros" }
