[package]
name = "enum-fun"
version = "0.1.2"
edition = "2024"
description = "Silly enum helpers."
repository = "https://github.com/tipsypastels/enum-fun"
license = "MIT"

[workspace]
members = [".", "./macros"]

[features]
name-trait = ["enum-fun-macros/name-trait"]
name-includes-plural = ["enum-fun-macros/name-includes-plural"]

[dependencies]
enum-fun-macros = { version = "0.1.2", path = "./macros" }
