[package]
name = "enum-fun-macros"
version = "0.1.1"
edition = "2024"
description = "Helper for enum-fun crate."
repository = "https://github.com/tipsypastels/enum-fun"
license = "MIT"

[lib]
proc-macro = true

[features]
name_trait = []
name_includes_plural = []

[dependencies]
heck = "0.5.0"
itertools = "0.11.0"
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.23", features = ["full"] }
