[package]
name = "enum-fun-macros"
version = "0.1.6"
edition = "2024"
description = "Helper for enum-fun crate."
repository = "https://github.com/tipsypastels/enum-fun"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.23", features = ["full"] }
